<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_devices"
        android:icon="@drawable/ic_nav_devices"
        android:title="@string/nav_devices" />
    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_nav_location"
        android:title="@string/nav_location" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@drawable/ic_nav_reports"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
